--- a/Conferences/CAV 2020(2).md
+++ b/Conferences/CAV 2020(2).md
@@ -2,31 +2,31 @@
 ---
 -	[🔓](https://doi.org/10.1007/978-3-030-53291-8_10) [[MetaVal]] - Witness Validation via Verification.
 	[Dirk Beyer](https://dblp.org/pid/b/DirkBeyer1.html), [Martin Spiessl](https://dblp.org/pid/269/9790.html)
-	⚙️
+	✅ Introduces [[MetaVal]]
 -	[🔓](https://doi.org/10.1007/978-3-030-53291-8_28) Good-Enough Synthesis.
 	[Shaull Almagor](https://dblp.org/pid/88/8556.html), [Orna Kupferman](https://dblp.org/pid/k/OrnaKupferman.html)
-	⚙️
+	❌ None
 -	[🔓](https://doi.org/10.1007/978-3-030-53291-8_27) [[PrIC3]] - Property Directed Reachability for MDPs.
 	[Kevin Batz](https://dblp.org/pid/215/5068.html), [Sebastian Junges](https://dblp.org/pid/115/4386.html), [Benjamin Lucien Kaminski](https://dblp.org/pid/39/9937.html), [Joost-Pieter Katoen](https://dblp.org/pid/k/JoostPieterKatoen.html), [Christoph Matheja](https://dblp.org/pid/172/5070.html), [Philipp Schröer](https://dblp.org/pid/264/0074.html)
-	⚙️
+	✅ Introduces [[PrIC3]]
 -	[🔓](https://doi.org/10.1007/978-3-030-53291-8_3) [[RTLola]] Cleared for Take-Off - Monitoring Autonomous Aircraft.
 	[Jan Baumeister](https://dblp.org/pid/253/1662.html), [Bernd Finkbeiner](https://dblp.org/pid/73/4443.html), [Sebastian Schirmer](https://dblp.org/pid/185/8889.html), [Maximilian Schwenger](https://dblp.org/pid/191/6041.html), [Christoph Torens](https://dblp.org/pid/33/9870.html)
-	⚙️
+	✅ Introduces [[RTLola]]
 -	[🔓](https://doi.org/10.1007/978-3-030-53291-8_17) Global PAC Bounds for Learning Discrete Time Markov Chains.
 	[Hugo Bazille](https://dblp.org/pid/150/7498.html), [Blaise Genest](https://dblp.org/pid/59/6859.html), [Cyrille Jégourel](https://dblp.org/pid/33/10826.html), [Jun Sun](https://dblp.org/pid/s/JunSun1.html)
-	⚙️
+	❌ None
 -	[🔓](https://doi.org/10.1007/978-3-030-53291-8_22) Qualitative Controller Synthesis for Consumption Markov Decision Processes.
 	[Frantisek Blahoudek](https://dblp.org/pid/131/6892.html), [Tomás Brázdil](https://dblp.org/pid/18/3197.html), [Petr Novotný](https://dblp.org/pid/91/10961.html), [Melkior Ornik](https://dblp.org/pid/175/9333.html), [Pranay Thangeda](https://dblp.org/pid/265/6126.html), [Ufuk Topcu](https://dblp.org/pid/12/6659.html)
 	✅ Implemented in [[FiMDP]]
 -	[🔓](https://doi.org/10.1007/978-3-030-53291-8_2) [[Seminator 2]] Can Complement Generalized Büchi Automata via Improved Semi-determinization.
 	[Frantisek Blahoudek](https://dblp.org/pid/131/6892.html), [Alexandre Duret-Lutz](https://dblp.org/pid/43/6032.html), [Jan Strejcek](https://dblp.org/pid/37/1716.html)
-	⚙️
+	✅ [[Seminator 2]]
 -	[🔓](https://doi.org/10.1007/978-3-030-53291-8_20) Checking Qualitative Liveness Properties of Replicated Systems with Stochastic Scheduling.
 	[Michael Blondin](https://dblp.org/pid/117/6024.html), [Javier Esparza](https://dblp.org/pid/e/JEsparza.html), [Martin Helfrich](https://dblp.org/pid/250/9258.html), [Antonín Kucera](https://dblp.org/pid/k/AntoninKucera.html), [Philipp J. Meyer](https://dblp.org/pid/118/3833.html)
 	✅ Implementation of the proposed procedure has no name
 -	[🔓](https://doi.org/10.1007/978-3-030-53291-8_13) Reasoning over Permissions Regions in Concurrent Separation Logic.
 	[James Brotherston](https://dblp.org/pid/77/3809.html), [Diana Costa](https://dblp.org/pid/156/7127-1.html), [Aquinas Hobor](https://dblp.org/pid/26/3410.html), [John Wickerson](https://dblp.org/pid/21/7915.html)
-	⚙️
+	❌ None
 -	[🔓](https://doi.org/10.1007/978-3-030-53291-8_21) Stochastic Games with Lexicographic Reachability-Safety Objectives.
 	[Krishnendu Chatterjee](https://dblp.org/pid/92/5602.html), [Joost-Pieter Katoen](https://dblp.org/pid/k/JoostPieterKatoen.html), [Maximilian Weininger](https://dblp.org/pid/194/2910.html), [Tobias Winkler](https://dblp.org/pid/66/750.html)
 	✅ Implemented within [[PRISM-games]]
@@ -35,16 +35,16 @@
 	✅ Implemented in [[Concord]]
 -	[🔓](https://doi.org/10.1007/978-3-030-53291-8_1) [[Automata Tutor]] v3.
 	[Loris D'Antoni](https://dblp.org/pid/85/770.html), [Martin Helfrich](https://dblp.org/pid/250/9258.html), [Jan Kretínský](https://dblp.org/pid/95/6511.html), [Emanuel Ramneantu](https://dblp.org/pid/264/5096.html), [Maximilian Weininger](https://dblp.org/pid/194/2910.html)
-	⚙️
+	✅ [[Automata Tutor]]
 -	[🔓](https://doi.org/10.1007/978-3-030-53291-8_11) Recursive Data Structures in [[SPARK]].
 	[Claire Dross](https://dblp.org/pid/07/9840.html), [Johannes Kanig](https://dblp.org/pid/70/225.html)
-	⚙️
+	✅ Improves [[SPARK]]
 -	[🔓](https://doi.org/10.1007/978-3-030-53291-8_18) Unbounded-Time Safety Verification of Stochastic Differential Dynamics.
 	[Shenghua Feng](https://dblp.org/pid/232/3100.html), [Mingshuai Chen](https://dblp.org/pid/169/1207.html), [Bai Xue](https://dblp.org/pid/74/2716-1.html), [Sriram Sankaranarayanan](https://dblp.org/pid/82/1542.html), [Naijun Zhan](https://dblp.org/pid/63/1911.html)
 	✅ Implementation has no name
 -	[🔓](https://doi.org/10.1007/978-3-030-53291-8_5) [[AdamMC]] - A Model Checker for Petri Nets with Transits against Flow-LTL.
 	[Bernd Finkbeiner](https://dblp.org/pid/73/4443.html), [Manuel Gieseking](https://dblp.org/pid/165/2732.html), [Jesko Hecking-Harbusch](https://dblp.org/pid/210/2559.html), [Ernst-Rüdiger Olderog](https://dblp.org/pid/o/ErnstRudigerOlderog.html)
-	⚙️
+	✅ Introduces [[AdamMC]]
 -	[🔓](https://doi.org/10.1007/978-3-030-53291-8_4) Realizing ømega-regular Hyperproperties.
 	[Bernd Finkbeiner](https://dblp.org/pid/73/4443.html), [Christopher Hahn](https://dblp.org/pid/91/9661.html), [Jana Hofmann](https://dblp.org/pid/246/5631.html), [Leander Tentrup](https://dblp.org/pid/143/2715.html)
 	✅ Implemented in [[BoSy]]
@@ -68,31 +68,31 @@
 	✅ Implemented [[GSpacer]]
 -	[🔓](https://doi.org/10.1007/978-3-030-53291-8_32) Decidable Synthesis of Programs with Uninterpreted Functions.
 	[Paul Krogmeier](https://dblp.org/pid/244/2375.html), [Umang Mathur](https://dblp.org/pid/137/7835.html), [Adithya Murali](https://dblp.org/pid/234/8538.html), [P. Madhusudan](https://dblp.org/pid/m/PMadhusudan.html), [Mahesh Viswanathan](https://dblp.org/pid/23/2759-1.html)
-	⚙️
+	❌ None
 -	[🔓](https://doi.org/10.1007/978-3-030-53291-8_25) [[PRISM-games]] 3.0 - Stochastic Game Verification with Concurrency, Equilibria and Time.
 	[Marta Kwiatkowska](https://dblp.org/pid/k/MartaZKwiatkowska.html), [Gethin Norman](https://dblp.org/pid/59/1659.html), [David Parker](https://dblp.org/pid/33/3095.html), [Gabriel Santos](https://dblp.org/pid/19/7786.html)
-	⚙️
+	✅ Introduces [[PRISM-games]]
 -	[🔓](https://doi.org/10.1007/978-3-030-53291-8_24) [[AMYTISS]] - Parallelized Automated Controller Synthesis for Large-Scale Stochastic Systems.
 	[Abolfazl Lavaei](https://dblp.org/pid/202/7474.html), [Mahmoud Khaled](https://dblp.org/pid/153/9945.html), [Sadegh Soudjani](https://dblp.org/pid/23/10279.html), [Majid Zamani](https://dblp.org/pid/34/9188.html)
-	⚙️
+	✅ Introduces [[AMYTISS]]
 -	[🔓](https://doi.org/10.1007/978-3-030-53291-8_12) [[Ivy]] - A Multi-modal Verification Tool for Distributed Algorithms.
 	[Kenneth L. McMillan](https://dblp.org/pid/m/KennethLMcMillan.html), [Oded Padon](https://dblp.org/pid/155/8122.html)
-	⚙️
+	✅ Introduces [[Ivy]]
 -	[🔓](https://doi.org/10.1007/978-3-030-53291-8_19) Widest Paths and Global Propagation in Bounded Value Iteration for Stochastic Games.
 	[Kittiphon Phalakarn](https://dblp.org/pid/187/5700.html), [Toru Takisaka](https://dblp.org/pid/156/0024.html), [Thomas Haas](https://dblp.org/pid/115/7079.html), [Ichiro Hasuo](https://dblp.org/pid/26/4542.html)
-	⚙️
+	❌ None
 -	[🔓](https://doi.org/10.1007/978-3-030-53291-8_14) Local Reasoning About the Presence of Bugs - Incorrectness Separation Logic.
 	[Azalea Raad](https://dblp.org/pid/84/9528.html), [Josh Berdine](https://dblp.org/pid/61/1623.html), [Hoang-Hai Dang](https://dblp.org/pid/201/8129.html), [Derek Dreyer](https://dblp.org/pid/d/DerekDreyer.html), [Peter W. O'Hearn](https://dblp.org/pid/o/PeterWOHearn.html), [Jules Villard](https://dblp.org/pid/79/6376.html)
-	⚙️
+	❌ None
 -	[🔓](https://doi.org/10.1007/978-3-030-53291-8_23) [[STMC]] - Statistical Model Checker with Stratified and Antithetic Sampling.
 	[Nima Roohi](https://dblp.org/pid/93/7539.html), [Yu Wang](https://dblp.org/pid/02/5889-44.html), [Matthew West](https://dblp.org/pid/16/1726-1.html), [Geir E. Dullerud](https://dblp.org/pid/d/GeirEDullerud.html), [Mahesh Viswanathan](https://dblp.org/pid/23/2759-1.html)
-	⚙️
+	✅ Introduces [[STMC]]
 -	[🔓](https://doi.org/10.1007/978-3-030-53291-8_33) Must Fault Localization for Program Repair.
 	[Bat-Chen Rothenberg](https://dblp.org/pid/189/1034.html), [Orna Grumberg](https://dblp.org/pid/g/OrnaGrumberg.html)
 	✅ Implemented in [[AllRepair]]
 -	[🔓](https://doi.org/10.1007/978-3-030-53291-8_9) [[Code2Inv]] - A Deep Learning Framework for Program Verification.
 	[Xujie Si](https://dblp.org/pid/142/8449.html), [Aaditya Naik](https://dblp.org/pid/269/9481.html), [Hanjun Dai](https://dblp.org/pid/144/7311.html), [Mayur Naik](https://dblp.org/pid/92/6794.html), [Le Song](https://dblp.org/pid/94/3481.html)
-	⚙️
+	✅ Introduces [[Code2Inv]]
 -	[🔓](https://doi.org/10.1007/978-3-030-53291-8_6) Action-Based Model Checking - Logic, Automata, and Reduction.
 	[Stephen F. Siegel](https://dblp.org/pid/50/540.html), [Yihao Yan](https://dblp.org/pid/269/9604.html)
 	✅ Implemented in [[McRERS]]
