--- a/Conferences/CAV 2020.md
+++ b/Conferences/CAV 2020.md
@@ -6,10 +6,10 @@
 	✅ Implementation of prototype has no name
 -	[🔓](https://doi.org/10.1007/978-3-030-53288-8_8) End-to-End Formal Verification of Ethereum 2.0 Deposit Smart Contract.
 	[Daejun Park](https://dblp.org/pid/152/3639-1.html), [Yi Zhang](https://dblp.org/pid/64/6544.html), [Grigore Rosu](https://dblp.org/pid/r/GrigoreRosu.html)
-	⚙️
+	❌ None
 -	[🔓](https://doi.org/10.1007/978-3-030-53288-8_32) [[SeQuaiA]] - A Scalable Tool for Semi-Quantitative Analysis of Chemical Reaction Networks.
 	[Milan Ceska](https://dblp.org/pid/213/3728.html), [Calvin Chau](https://dblp.org/pid/269/9591.html), [Jan Kretínský](https://dblp.org/pid/95/6511.html)
-	⚙️
+	✅ Introduces [[SeQuaiA]]
 -	[🔓](https://doi.org/10.1007/978-3-030-53288-8_29) A Novel Approach for Solving the BMI Problem in Barrier Certificates Generation.
 	[Xin Chen](https://dblp.org/pid/24/1518-27.html), [Chao Peng](https://dblp.org/pid/85/6436.html), [Wang Lin](https://dblp.org/pid/36/5376.html), [Zhengfeng Yang](https://dblp.org/pid/68/3884.html), [Yifang Zhang](https://dblp.org/pid/227/1124.html), [Xuandong Li](https://dblp.org/pid/76/5446.html)
 	✅ Implemented in [[SISBMI]]
@@ -27,13 +27,13 @@
 	✅ Implemented [[AMUSIC]]
 -	[🔓](https://doi.org/10.1007/978-3-030-53288-8_28) [[AEON]] - Attractor Bifurcation Analysis of Parametrised Boolean Networks.
 	[Nikola Benes](https://dblp.org/pid/71/1110.html), [Lubos Brim](https://dblp.org/pid/92/3060.html), [Jakub Kadlecaj](https://dblp.org/pid/269/9668.html), [Samuel Pastva](https://dblp.org/pid/167/4487.html), [David Safránek](https://dblp.org/pid/86/2438.html)
-	⚙️
+	✅ Introduces [[AEON]]
 -	[🔓](https://doi.org/10.1007/978-3-030-53288-8_17) Root Causing Linearizability Violations.
 	[Berk Çirisci](https://dblp.org/pid/217/2770.html), [Constantin Enea](https://dblp.org/pid/72/2839.html), [Azadeh Farzan](https://dblp.org/pid/89/148.html), [Suha Orhun Mutluergil](https://dblp.org/pid/170/4198.html)
-	⚙️
+	❌ None
 -	[🔓](https://doi.org/10.1007/978-3-030-53288-8_27) [[PIRK]] - Scalable Interval Reachability Analysis for High-Dimensional Nonlinear Systems.
 	[Alex Devonport](https://dblp.org/pid/236/4995.html), [Mahmoud Khaled](https://dblp.org/pid/153/9945.html), [Murat Arcak](https://dblp.org/pid/94/6666.html), [Majid Zamani](https://dblp.org/pid/34/9188.html)
-	⚙️
+	✅ Introduces [[PIRK]]
 -	[🔓](https://doi.org/10.1007/978-3-030-53288-8_3) An Abstraction-Based Framework for Neural Network Verification.
 	[Yizhak Yisrael Elboher](https://dblp.org/pid/251/9586.html), [Justin Gottschlich](https://dblp.org/pid/56/2013.html), [Guy Katz](https://dblp.org/pid/23/10321.html)
 	✅ Integrated with [[Marabou]]
@@ -43,34 +43,34 @@
 	✅ Implemented in [[FACTEST]]
 -	[🔓](https://doi.org/10.1007/978-3-030-53288-8_6) Formal Analysis and Redesign of a Neural Network-Based Aircraft Taxiing System with [[VerifAI]].
 	[Daniel J. Fremont](https://dblp.org/pid/144/7602.html), [Johnathan Chiu](https://dblp.org/pid/249/2928.html), [Dragos D. Margineantu](https://dblp.org/pid/34/5356.html), [Denis Osipychev](https://dblp.org/pid/202/5662.html), [Sanjit A. Seshia](https://dblp.org/pid/s/SanjitASeshia.html)
-	⚙️
+	✅ Uses [[[VerifAI]]]
 -	[🔓](https://doi.org/10.1007/978-3-030-53288-8_20) Nonlinear Craig Interpolant Generation.
 	[Ting Gan](https://dblp.org/pid/50/5083.html), [Bican Xia](https://dblp.org/pid/07/587.html), [Bai Xue](https://dblp.org/pid/74/2716-1.html), [Naijun Zhan](https://dblp.org/pid/63/1911.html), [Liyun Dai](https://dblp.org/pid/08/10346.html)
-	⚙️
+	❌ None
 -	[🔓](https://doi.org/10.1007/978-3-030-53288-8_26) [[SAW (Safety Analysis of Weakly-Hard Systems)]] - A Tool for Safety Analysis of Weakly-Hard Systems.
 	[Chao Huang](https://dblp.org/pid/18/4087.html), [Kai-Chieh Chang](https://dblp.org/pid/199/8216.html), [Chung-Wei Lin](https://dblp.org/pid/87/11.html), [Qi Zhu](https://dblp.org/pid/66/5923-2.html)
-	⚙️
+	✅ Introduces [[SAW]]
 -	[🔓](https://doi.org/10.1007/978-3-030-53288-8_15) Parameterized Verification of Systems with Global Synchronization and Guards.
 	[Nouraldin Jaber](https://dblp.org/pid/194/4203.html), [Swen Jacobs](https://dblp.org/pid/73/6880.html), [Christopher Wagner](https://dblp.org/pid/59/6876.html), [Milind Kulkarni](https://dblp.org/pid/47/1003.html), [Roopsha Samanta](https://dblp.org/pid/78/7445.html)
-	⚙️
+	❌ None
 -	[🔓](https://doi.org/10.1007/978-3-030-53288-8_25) [[TarTar]] - A Timed Automata Repair Tool.
 	[Martin Kölbl](https://dblp.org/pid/221/1706.html), [Stefan Leue](https://dblp.org/pid/20/6822.html), [Thomas Wies](https://dblp.org/pid/23/5398.html)
-	⚙️
+	✅ Introduces [[TarTar]]
 -	[🔓](https://doi.org/10.1007/978-3-030-53288-8_14) Refinement for Structured Concurrent Programs.
 	[Bernhard Kragl](https://dblp.org/pid/138/6924.html), [Shaz Qadeer](https://dblp.org/pid/q/ShazQadeer.html), [Thomas A. Henzinger](https://dblp.org/pid/h/ThomasAHenzinger.html)
 	✅ Implemented in [[CIVL (Boogie extension)]]
 -	[🔓](https://doi.org/10.1007/978-3-030-53288-8_16) [[Hampa]] - Solver-Aided Recency-Aware Replication.
 	[Xiao Li](https://dblp.org/pid/66/2069.html), [Farzin Houshmand](https://dblp.org/pid/232/9988.html), [Mohsen Lesani](https://dblp.org/pid/82/2603.html)
-	⚙️
+	✅ Introduces [[Hampa]]
 -	[🔓](https://doi.org/10.1007/978-3-030-53288-8_13) Semantics, Specification, and Bounded Verification of Concurrent Libraries in Replicated Systems.
 	[Kartik Nagar](https://dblp.org/pid/120/1805.html), [Prasita Mukherjee](https://dblp.org/pid/263/6983.html), [Suresh Jagannathan](https://dblp.org/pid/j/SJagannathan.html)
-	⚙️
+	❌ None
 -	[🔓](https://doi.org/10.1007/978-3-030-53288-8_12) Validation of Abstract Side-Channel Models for Computer Architectures.
 	[Hamed Nemati](https://dblp.org/pid/127/4008.html), [Pablo Buiras](https://dblp.org/pid/07/7975.html), [Andreas Lindner](https://dblp.org/pid/28/610.html), [Roberto Guanciale](https://dblp.org/pid/12/5314.html), [Swen Jacobs](https://dblp.org/pid/73/6880.html)
 	✅ Implemented in [[Scam-V]]
 -	[🔓](https://doi.org/10.1007/978-3-030-53288-8_11) Verification of Quantitative Hyperproperties Using Trace Enumeration Relations.
 	[Shubham Sahai](https://dblp.org/pid/170/7496.html), [Pramod Subramanyan](https://dblp.org/pid/27/8110.html), [Rohit Sinha](https://dblp.org/pid/04/4646-1.html)
-	⚙️
+	❌ None
 -	[🔓](https://doi.org/10.1007/978-3-030-53288-8_18) Symbolic Partial-Order Execution for Testing Multi-Threaded Programs.
 	[Daniel Schemmel](https://dblp.org/pid/119/0975.html), [Julian Büning](https://dblp.org/pid/223/5126.html), [César Rodríguez](https://dblp.org/pid/74/9958.html), [David Laprell](https://dblp.org/pid/265/5614.html), [Klaus Wehrle](https://dblp.org/pid/w/KlausWehrle.html)
 	✅ Implemented [[POR-SE]]
@@ -88,13 +88,13 @@
 	✅ Implemented in [[NNV]]
 -	[🔓](https://doi.org/10.1007/978-3-030-53288-8_1) [[NNV]] - The Neural Network Verification Tool for Deep Neural Networks and Learning-Enabled Cyber-Physical Systems.
 	[Hoang-Dung Tran](https://dblp.org/pid/160/7295.html), [Xiaodong Yang](https://dblp.org/pid/19/1551.html), [Diego Manzanas Lopez](https://dblp.org/pid/215/3580.html), [Patrick Musau](https://dblp.org/pid/215/3389.html), [Luan Viet Nguyen](https://dblp.org/pid/144/7613.html), [Weiming Xiang](https://dblp.org/pid/72/5686.html), [Stanley Bak](https://dblp.org/pid/16/7787.html), [Taylor T. Johnson](https://dblp.org/pid/96/11505.html)
-	⚙️
+	✅ Introduces [[NNV]]
 -	[🔓](https://doi.org/10.1007/978-3-030-53288-8_19) [[fault]] - A Python Embedded Domain-Specific Language for Metaprogramming Portable Hardware Verification Components.
 	[Lenny Truong](https://dblp.org/pid/173/8194.html), [Steven Herbst](https://dblp.org/pid/164/5403.html), [Rajsekhar Setaluri](https://dblp.org/pid/148/6519.html), [Makai Mann](https://dblp.org/pid/233/0746.html), [Ross G. Daly](https://dblp.org/pid/149/0146.html), [Keyi Zhang](https://dblp.org/pid/164/6584.html), [Caleb Donovick](https://dblp.org/pid/160/0667.html), [Daniel Stanley](https://dblp.org/pid/253/7515.html), [Mark Horowitz](https://dblp.org/pid/h/MarkHorowitz.html), [Clark W. Barrett](https://dblp.org/pid/b/ClarkWBarrett.html), [Pat Hanrahan](https://dblp.org/pid/h/PatHanrahan.html)
-	⚙️
+	✅ Introduces [[fault]]
 -	[🔓](https://doi.org/10.1007/978-3-030-53288-8_5) Systematic Generation of Diverse Benchmarks for DNN Verification.
 	[Dong Xu](https://dblp.org/pid/09/3493.html), [David Shriver](https://dblp.org/pid/202/8415.html), [Matthew B. Dwyer](https://dblp.org/pid/d/MatthewBDwyer.html), [Sebastian G. Elbaum](https://dblp.org/pid/e/SebastianGElbaum.html)
 	✅ Implemented [[GDVB]]
 -	[🔓](https://doi.org/10.1007/978-3-030-53288-8_7) The [[Move]] Prover.
 	[Jingyi Emma Zhong](https://dblp.org/pid/269/9589.html), [Kevin Cheang](https://dblp.org/pid/239/0135.html), [Shaz Qadeer](https://dblp.org/pid/q/ShazQadeer.html), [Wolfgang Grieskamp](https://dblp.org/pid/g/WolfgangGrieskamp.html), [Sam Blackshear](https://dblp.org/pid/86/8008.html), [Junkil Park](https://dblp.org/pid/02/8785.html), [Yoni Zohar](https://dblp.org/pid/147/6088.html), [Clark W. Barrett](https://dblp.org/pid/b/ClarkWBarrett.html), [David L. Dill](https://dblp.org/pid/d/DavidLDill.html)
-	⚙️
+	✅ Introduces [[Move]]
